--- a/assets/css/mycss.css
+++ b/assets/css/mycss.css
@@ -6,6 +6,9 @@ html,body{
    	line-height: 25px;
     	color:#555555;
 }
+a{
+	cursor:pointer;
+}
 
 .header{
     	font-family: 'Dancing Script', Georgia, Times, serif;
