--- a/assets/css/navCSS.css
+++ b/assets/css/navCSS.css
@@ -9,9 +9,15 @@
 	color:#000000;
 }
 .nav{
-	background-color:#FF4040;
+	background-color:#FF0040;
 	height:50px;
 	margin-bottom:30px;
+	border-bottom: solid 1px #000000;
+}
+.title{
+	margin-bottom:0px;
+	width:100%;	
+	color: #000000;																			
 }
 
 .nav ul{
@@ -31,7 +37,12 @@
 }
 
 .nav ul li:active{
-	background-color:#000000;
+	/*background-color:#EBEBEB;*/
+}
+.out{
+	float:right;
+	margin-right:5px;
+	margin-top:5px;
 }
 
 .flag{
