possible glyph fix

--- a/assets/font-awesome-4.0.3/css/font-awesome.css
+++ b/assets/font-awesome-4.0.3/css/font-awesome.css
@@ -12,6 +12,7 @@
   font-style: normal;
 }
 .fa {
+  text-rendering: auto;
   display: inline-block;
   font-family: FontAwesome;
   font-style: normal;
